        Fix for <rdar://problem/5086797>, layoutPending is now reporting incorrect results, which will lead         to all sorts of layout issues.  This is in bugzilla as 13179.

Reviewed by hyatt

        - fix http://bugs.webkit.org/show_bug.cgi?id=13179
          REGRESSION (r20410): In debug builds, loading a certain page is suspended until redisplay is forced

        Moved the root->needsLayout() check from layoutPending() to needsLayout()
        to restore the behavior before r20324.

        * page/FrameView.cpp:
        (WebCore::FrameView::layoutPending):
        (WebCore::FrameView::needsLayout):



Canonical link: https://commits.webkit.org/17214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20474 268f45cc-cd09-0410-ab3c-d52691b4dbfc